created bg patterns

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <title>Frontend Mentor Pricing Component with Toggle</title>
   </head>
   <body>
+    <!-- bg patterns -->
+    <img class="bg-pattern bg-pattern--top" src="./images/bg-top.svg" alt="" />
+    <img
+      class="bg-pattern bg-pattern--bottom"
+      src="./images/bg-bottom.svg"
+      alt=""
+    />
     <script src="./js/main.js"></script>
   </body>
 </html>
