--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <!-- single card -->
       <article class="card">
         <h4 class="card__plan">Basic</h4>
-        <h2 class="card__price">$199.99</h2>
+        <h2 class="card__price" id="basic-price">$199.99</h2>
         <ul class="card__list">
           <li class="card__item">500 GB Storage</li>
           <li class="card__item">2 Users Allowed</li>
@@ -46,7 +46,7 @@
       <!-- single card -->
       <article class="card card--primary">
         <h4 class="card__plan">Professional</h4>
-        <h2 class="card__price">$249.99</h2>
+        <h2 class="card__price" id="pro-price">$249.99</h2>
         <ul class="card__list">
           <li class="card__item">1 TB Storage</li>
           <li class="card__item">5 Users Allowed</li>
@@ -57,7 +57,7 @@
       <!-- single card -->
       <article class="card">
         <h4 class="card__plan">Master</h4>
-        <h2 class="card__price">$399.99</h2>
+        <h2 class="card__price" id="master-price">$399.99</h2>
         <ul class="card__list">
           <li class="card__item">2 TB Storage</li>
           <li class="card__item">10 Users Allowed</li>
