added aos effects

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- header -->
-    <header class="header">
+    <header class="header" data-aos="fade-in">
       <h1 class="header__title">Our Pricing</h1>
       <div class="toggle">
         <h5 class="toggle__option">Annually</h5>
@@ -31,7 +31,7 @@
     </header>
 
     <!-- cards -->
-    <section class="cards">
+    <section class="cards" data-aos="fade-in" data-aos-delay="200">
       <!-- single card -->
       <article class="card">
         <h4 class="card__plan">Basic</h4>
